--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,6 @@
             <name>Scala-Tools Maven2 Repository</name>
             <url>http://scala-tools.org/repo-releases</url>
         </pluginRepository>
-        <pluginRepository>
-            <id>maven2.java.net</id>
-            <name>Java.net Repository for Maven 2</name>
-            <url>http://download.java.net/maven/2</url>
-        </pluginRepository>
     </pluginRepositories>
 
     <dependencies>
@@ -63,7 +58,7 @@
         <dependency>
             <groupId>net.liftweb</groupId>
             <artifactId>lift-core</artifactId>
-            <version>1.0</version>
+            <version>1.1-M5</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -85,7 +80,7 @@
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty</artifactId>
-            <version>[6.1.6,)</version>
+            <version>[6.1.6, 6.1.19)</version>
             <scope>test</scope>
         </dependency>
     <!-- for LiftConsole -->
@@ -98,8 +93,8 @@
     </dependencies>
 
     <build>
-    <!--<sourceDirectory>src/main/scala</sourceDirectory>
-    <testSourceDirectory>src/test/scala</testSourceDirectory> -->
+    	<sourceDirectory>src/main/scala</sourceDirectory>
+    	<testSourceDirectory>src/test/scala</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
