--- a/pom.xml
+++ b/pom.xml
@@ -48,9 +48,9 @@
             <url>http://scala-tools.org/repo-releases</url>
         </repository>
         <repository>
-            <id>scala-tools.org.snapshots</id>
+            <id>scala-tools.org.releases</id>
             <name>Scala Tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-snapshots</url>
+            <url>http://scala-tools.org/repo-releases</url>
             <snapshots/>
         </repository>
         <repository>
@@ -257,22 +257,22 @@
         <dependency>
             <groupId>net.liftweb</groupId>
             <artifactId>lift-webkit</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>net.liftweb</groupId>
             <artifactId>lift-widgets</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>net.liftweb</groupId>
             <artifactId>lift-testkit</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0</version>
         </dependency>        
         <dependency>
             <groupId>net.liftweb</groupId>
             <artifactId>lift-mongodb-record</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0</version>
         </dependency>        
         <dependency>
             <groupId>com.h2database</groupId>
